# inkscape

CMakeScripts/: inkscape-version.cmake
debian/: changelog  control  copyright  gbp.conf  inkscape-tutorials.install  inkscape.install  inkscape.links  inkscape.lintian-overrides  inkscape.maintscript  inkscape.mime  rules  watch
debian/patches/: Fix-LPE-test-sensitivity-to-system-fonts-list.patch  Fix-building-with-Poppler-24.11.patch  Fix-building-with-poppler-24.12.0.patch  Fix-building-with-poppler-25.02.0.patch  Future-proof-against-poppler-24.10-changes.patch  fuzzy_tests.patch  python3.patch  series  skip-test-8_png_check_output.patch  skip-test-geom-pathstroke.patch  skip-test-glyph-big-endian.patch  skip-test-librevenge.patch  skip-test-lpe.patch  skip-test-multi-page-sample-big-endian.patch  skip-test-use.patch  skip-tests-multi-architectures.patch  skip-tests-temp.patch  skip-tests.patch  test-output-page.patch  timeout-test-lpe.patch
debian/source/: lintian-overrides
share/extensions/other/extension-afdesign/: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
share/extensions/other/extension-afdesign/tests/: conftest.py
share/extensions/other/extension-afdesign/tests/converter/: conftest.py  test_convert.py  test_curve.py  test_fill.py  test_shape.py
share/extensions/other/extension-afdesign/tests/converter/data/: artboards_and_guides.afdesign  blend_modes.afdesign  blur.afdesign  powerstroke.afdesign  shapes.afdesign  text.afdesign  vector_crop.afdesign  vector_crop.afdesign.license
share/extensions/other/extension-afdesign/tests/converter/data/refs/: inkaf.afinput__artboards_and_guides__afdesign.out  inkaf.afinput__blend_modes__afdesign.out  inkaf.afinput__blur__afdesign.out  inkaf.afinput__powerstroke__afdesign.out  inkaf.afinput__powerstroke__afdesign.out.license  inkaf.afinput__shapes__afdesign.out  inkaf.afinput__text__afdesign.out  inkaf.afinput__vector_crop__afdesign.out
share/extensions/other/extension-afdesign/tests/files/afdesign/: default.afdesign
share/extensions/other/extension-afdesign/tests/files/compare/: default.json
share/extensions/other/extension-afdesign/tests/parser/: test_enhance.py  test_extract.py  test_individual_types.py  test_parse.py  test_shared.py
share/extensions/other/extension-xaml/: pyproject.toml  tox.ini
share/extensions/other/extension-xaml/tests/: test_svg2xaml_adv.py  test_svg2xaml_text.py
(+46 files in other folders)
