[tool.poetry]
name = "inkxaml"
version = "0.1.0"
description = "Convert SVG files to XAML (WPF, AvaloniaUI) and vice versa."
authors = ["Inkscape Authors <inkscape-devel@lists.inkscape.org>"]
maintainers = ["Jonathan Neuhauser <jonathan.neuhauser@outlook.com>"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Pre-processors"
]


license = "GPL-2.0-or-later"
readme = "readme.md"
repository = "https://gitlab.com/inkscape/extras/extension-xaml"

[tool.poetry.dependencies]
python = "^3.8"
inkex = {git = "https://gitlab.com/inkscape/extensions.git", rev = "1.3.x"}


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"
coverage = "^6.2"
tox = "^3.24.5"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
svg2xaml = 'inkxaml.svg2xaml:run'